--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@
     background-size:cover;
     background-position: center;
 }
+
+.CountryList {
+	font-size: 2.5em;
+	width: 100%;
+	height: 100vh;
+}
