--- a/style.css
+++ b/style.css
@@ -1,15 +1,7 @@
-*{
+body {
+	overflow:auto;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-}
-.Banner {
-    font-size: 2.5em;
-    width:100%;
-    height:100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url(background.jfif);
-    background-size:cover;
-    background-position: center;
 }
 
 .CountryList {
@@ -36,7 +28,108 @@
 	display: table;
 }
 
+*{
+    font-family: sans-serif-duo;
+}
+
 img {
 	height: 300px;
 	width: 450px;
+}
+
+ul {
+  margin-top: 47px;
+  padding: 0;
+  width: 25%;
+  background-color: #ffffff;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+li a {
+  display: block;
+  color: #000;
+  font-size; 20px;
+  padding: 10px 50px;
+  text-decoration: none;
+}
+
+li a.active {
+  background-color: blue;
+  color: white;
+}
+
+li a:hover:not(.active) {
+  background-color: blue;
+  color: white;
+}
+
+.topnav {
+  overflow: auto;
+  position: fixed;
+  background-color: #000;
+  width: 100%;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: #00f;
+  color: white;
+}
+
+.topnav a.active {
+  background-color: blue;
+  color: white;
+}
+
+.topnav .search-container {
+  float: left;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: ;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
 }
