--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 	display: table;
 }
 
-*{
+* {
     font-family: sans-serif-duo;
 }
 
@@ -84,7 +84,9 @@ li a:hover:not(.active) {
   font-size: 20px;
 }
 
-.topnav label {
+.topnav button {
+  background-color: black;
+  text-decoration: underline;
   float: left;
   display: block;
   color: white;
@@ -114,8 +116,9 @@ li a:hover:not(.active) {
   color: white;
 }
 
-.topnav .search-container {
-  float: left;
+.topnav button:hover {
+  background-color: #00f;
+  color: white;
 }
 
 .topnav input[type=text] {
@@ -123,36 +126,4 @@ li a:hover:not(.active) {
   margin-top: 8px;
   font-size: 17px;
   border: none;
-}
-
-.topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
-
-.topnav .search-container button:hover {
-  background: #ccc;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: ;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;  
-  }
 }
