--- a/style.css
+++ b/style.css
@@ -121,9 +121,18 @@ li a:hover:not(.active) {
   color: white;
 }
 
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
+.topnav input {
+  background-color: black;
+  text-decoration: underline;
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  font-size: 20px;
+}
+
+.topnav input:hover {
+  background-color: #00f;
+  color: white;
 }
