--- a/style.css
+++ b/style.css
@@ -39,10 +39,15 @@ img {
 	width: 450px;
 }
 
+iframe {
+	height: 300px;
+	width: 450px;
+}
+
 #countryList {
   margin-top: 47px;
   padding: 0;
-  width: 20%;
+  width: 15%;
   background-color: #000;
   color: white;
   position: fixed;
@@ -80,7 +85,7 @@ li a:hover:not(.active) {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 68px;
   font-size: 20px;
 }
 
@@ -91,7 +96,7 @@ li a:hover:not(.active) {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 67px;
   font-size: 20px;
 }
 
@@ -102,8 +107,12 @@ li a:hover:not(.active) {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 67px;
   font-size: 20px;
+}
+
+.topnav .search-container {
+	float: right;
 }
 
 .topnav a:hover {
