--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-	--topnav-color: #03a9f4;
-	--sidebar-color: #01cfef;
+	--topnav-color: #30a8a0;
+	--sidebar-color: #106860;
 	--text-color: white;
-	--active-color: blue;
+	--active-color: #084838;
 }
 
 body {
