--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 /* Column features */
 .column {
-	float: center;
+	float: left;
 	width: 33.33%;
 	font-size: 0.75em;
 }
@@ -48,7 +48,8 @@ img {
 
 /* Defines every iframe's size */
 iframe {
-	height: 300px;
+	float: right;
+  height: 300px;
 	width: 450px;
 }
 
